--- a/publications.html
+++ b/publications.html
@@ -7,7 +7,7 @@
   <title>Project</title>
   <meta name="description" content="Kimyo International University in Tashkent">
   <meta name="keywords" content="Kimyo International University in Tashkent">
-  <link href="assets/img/favicon.jpg" rel="icon">
+  <link href="assets/img/logo.png" rel="icon">
   <link href="https://fonts.googleapis.com" rel="preconnect">
   <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin>
   <link
@@ -72,7 +72,7 @@
 
   <div id="preloader"></div>
 
-  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>   
+  <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
   <script src="assets/vendor/aos/aos.js"></script>
   <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
   <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
