--- a/secondments.html
+++ b/secondments.html
@@ -165,6 +165,14 @@
 
             const descDiv = document.createElement('div');
             descDiv.innerHTML = description;
+            descDiv.querySelectorAll('img').forEach(img => {
+              img.style.maxWidth = '100%';
+              img.style.height = 'auto';
+              img.style.display = 'block';
+              img.style.marginTop = '10px';
+              img.style.borderRadius = '8px';
+              img.style.objectFit = 'contain';
+            });
             body.appendChild(descDiv);
 
             collapseDiv.appendChild(body);
