--- a/publications.html
+++ b/publications.html
@@ -80,7 +80,7 @@
   <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
   <script src="assets/js/main.js"></script>
   <script>
-    const BASE_URL = "http://localhost:5002/api";
+    const BASE_URL = "https://api.project.kiut.uz/api";
     let currentLang = localStorage.getItem('lang') || 'en';
     let translations = {};
 
