Refactor navigation links to use absolute paths and add server setup with Express

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
     <div class="container position-relative d-flex align-items-center justify-content-between">
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="#" id="information-page"></a></li>
-          <li><a href="./project.html" id="project-project"></a></li>
-          <li><a href="./publications.html" id="publications-page"></a></li>
-          <li><a href="./secondments.html" id="secondments-page"></a></li>
+          <li><a href="/" id="information-page"></a></li>
+          <li><a href="/projects" id="project-project"></a></li>
+          <li><a href="/publications" id="publications-page"></a></li>
+          <li><a href="/secondments" id="secondments-page"></a></li>
         </ul>
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
